# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  README.md  check.sh  format.sh  pyproject.toml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_live_smoke.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
