[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "openai>=1.50.0",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "httpx>=0.27",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "live: hits the real OpenAI API, run manually only (uv run pytest -m live -s)",
]
addopts = "-m 'not live'"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/conftest.py" = ["E402"]
"backend/tests/test_live_smoke.py" = ["E402"]
